# lib/controller/functions.go
@@ -118,6 +118,17 @@ func (this *Controller) GetAspectNodesMeasuringFunctions(aspect string, ancestor
 	return
 }
 
+// returns all controlling functions used in combination with given aspect (and optional its descendants and ancestors)
+func (this *Controller) GetAspectNodesControllingFunctions(aspect string, ancestors bool, descendants bool) (result []models.Function, err error, code int) {
+	code = http.StatusOK
+	ctx, _ := getTimeoutContext()
+	result, err = this.db.ListAllControllingFunctionsByAspect(ctx, aspect, ancestors, descendants)
+	if err != nil {
+		code = http.StatusInternalServerError
+	}
+	return
+}
+
 func (this *Controller) GetDeviceClassesFunctions(deviceClass string) (result []models.Function, err error, code int) {
 	code = http.StatusOK
 	ctx, _ := getTimeoutContext()
